base/kyverno-policies-enforce/require-requests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-enforce
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-cpu-memory-requests
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "CPU and memory requests are required."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
            =(initContainers):
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
